# oneMinTTS

./: .gitattributes  .gitignore  README.md
mms_tts/: CMakeLists.txt  Dockerfile  requirements.txt
mms_tts/files/: mms_vocab.json  model_download.py
mms_tts/files/models/: facebook_mms-tts-ara.onnx  facebook_mms-tts-eng.onnx  facebook_mms-tts-kor.onnx
mms_tts/src/: main.cpp
src/: main.cpp  main_win.cpp
vits2/: LICENSE  README.md
vits2/src/: main.cpp  main_win.cpp
